Work in progress
* add an about dialog
* add edge line to map, and dim color for walkable area in default config

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -34,7 +34,9 @@ map_centered = 0
 ; Alpha channel for whole layer (0-255)
 alpha = 170
 ; walkable area color (R,G,B) 0-255 for each channel
-walkable_color = 50,50,50
+walkable_color = 20,20,20
+; map edge color, set 0,0,0 to hide edge
+edge_color = 128,128,128
 ; text color
 text_color = 255,255,255
 ; colors for player pointer (inner/outer)
