Work in progress
* try a new way to locate current player in multiplayer games
* add reading installation path from registry as fallback
* add `show_npc_name` to config ini
* change default config values (better for common use):
  * font_size: 12->14
  * position: 1->2
  * scale: 1.0->2.0
  * map_centered: 0->1
  * show_monster_name: 1->0
* fix bug that running D2RMH before D2R(windowed) causes overlay window shown out of window

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -1,9 +1,10 @@
 [main]
-; path to your Diablo II LOD v1.13c
+; path to your Diablo II LOD v1.13c.
+; if not found in this path, D2RMH will fallback to read installation path from registry.
 d2_path = .
 ; font settings
 font_file_path = C:\Windows\Fonts\Arial.ttf
-font_size = 12
+font_size = 14
 ; font size for message list
 msg_font_size = 24
 ; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
@@ -25,12 +26,12 @@ full_line = 0
 ; 0-top left
 ; 1-top right
 ; 2-center
-position = 1
+position = 2
 ; map scaling, can be 1.0-4.0, cut when larger than game window
-scale = 1.0
+scale = 2.0
 ; 0-static map
 ; 1-keep player in map center
-map_centered = 0
+map_centered = 1
 ; Alpha channel for whole layer (0-255)
 alpha = 170
 ; walkable area color (R,G,B) 0-255 for each channel
@@ -74,7 +75,9 @@ show_items = 1
 ;  1 - common monsters and minions are also shown
 show_normal_monsters = 0
 ; show monster's name
-show_monster_name = 1
+show_monster_name = 0
+; show npc's name
+show_npc_name = 1
 ; show monster's enchant including aura, check [enchants] section below.
 show_monster_enchant = 1
 ; show monster's resist(immune), check [enchants] section below.
