--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_subdirectory(glad)
 
-file(GLOB D2RMH_SRC_FILES *.cpp *.h *.rc)
+file(GLOB D2RMH_SRC_FILES *.cpp *.h res.rc)
+if(NOT MSVC)
+  set(D2RMH_SRC_FILES ${D2RMH_SRC_FILES} manifest.rc)
+endif()
 add_executable(D2RMH WIN32 ${D2RMH_SRC_FILES})
 add_custom_target(D2RMH_RES DEPENDS D2RMH.ico)
 add_dependencies(D2RMH D2RMH_RES)
