--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -238,6 +238,7 @@
 357=Quest|Tome
 361=Shrine|magic shrine
 376=Quest|Hellforge
+377=Portal|Guild Portal
 397=Chest|chest
 398=Waypoint|Waypoint
 402=Waypoint|Waypoint
@@ -531,6 +532,7 @@
 280=FlayerShaman|0
 281=SoulKillerShaman|0
 282=StygianDollShaman|0
+283=larva|0
 284=SandMaggotQueen|0
 285=RockWormQueen|0
 286=DevourerQueen|0
@@ -1544,6 +1546,7 @@
 520=amu|amu
 521=vip|vip
 522=rin|rin
+523=gld|gld
 524=bks|bks
 525=bkd|bkd
 526=aqv|aqv
@@ -1565,12 +1568,14 @@
 542=spe|spe
 543=key|key
 544=luv|luv
+545=xyz|xyz
 546=j34|j34
 547=g34|g34
 548=bbb|bbb
 549=box|box
 550=tr1|tr1
 551=mss|mss
+552=ass|ass
 553=qey|qey
 554=qhr|qhr
 555=qbr|qbr
@@ -1587,18 +1592,22 @@
 566=gpy|gpy
 567=gcb|gcb
 568=gfb|gfb
+569=gsb|gsb
 570=glb|glb
 571=gpb|gpb
 572=gcg|gcg
 573=gfg|gfg
+574=gsg|gsg
 575=glg|glg
 576=gpg|gpg
 577=gcr|gcr
 578=gfr|gfr
+579=gsr|gsr
 580=glr|glr
 581=gpr|gpr
 582=gcw|gcw
 583=gfw|gfw
+584=gsw|gsw
 585=glw|glw
 586=gpw|gpw
 587=hp1|hp1
@@ -1654,13 +1663,16 @@
 641=r32|r32
 642=r33|r33
 643=jew|jew
+644=ice|ice
 645=0sc|0sc
+646=tr2|tr2
 647=pk1|pk1
 648=pk2|pk2
 649=pk3|pk3
 650=dhn|dhn
 651=bey|bey
 652=mbr|mbr
+653=toa|toa
 654=tes|tes
 655=ceh|ceh
 656=bet|bet
@@ -7557,6 +7569,19 @@ Guardian[9]=守護せし者
 Guardian[10]=[ms]Guardião
 Guardian[11]=Страж
 Guardian[12]=墓穴守卫
+Guild Portal[0]=            
+Guild Portal[1]=            
+Guild Portal[2]=            
+Guild Portal[3]=            
+Guild Portal[4]=            
+Guild Portal[5]=            
+Guild Portal[6]=
+Guild Portal[7]=            
+Guild Portal[8]=            
+Guild Portal[9]=
+Guild Portal[10]=            
+Guild Portal[11]=            
+Guild Portal[12]=
 Halls of Anguish[0]=Halls of Anguish
 Halls of Anguish[1]=怨慟之廳
 Halls of Anguish[2]=Hallen der Qual
@@ -12484,6 +12509,19 @@ asheara[9]=アシェアラ
 asheara[10]=Ashara
 asheara[11]=Ашира
 asheara[12]=艾席拉
+ass[0]=Book of Skill
+ass[1]=技能之書
+ass[2]=Buch der Fertigkeit
+ass[3]=Libro de habilidad
+ass[4]=Livre des compétences
+ass[5]=Libro dell'Abilità
+ass[6]=기술 책
+ass[7]=Księga Umiejętności
+ass[8]=Libro de habilidad
+ass[9]=スキルの書
+ass[10]=Livro de Habilidade
+ass[11]=Книга умений
+ass[12]=技能书
 axe[0]=Axe
 axe[1]=斧
 axe[2]=[fs]Axt
@@ -13953,6 +13991,19 @@ glb[9]=上質なサファイア
 glb[10]=Safira Impecável
 glb[11]=Безупречный сапфир
 glb[12]=无瑕的蓝宝石
+gld[0]=Gold
+gld[1]=金幣
+gld[2]=Gold
+gld[3]=de oro
+gld[4]=or
+gld[5]=oro
+gld[6]=금화
+gld[7]=szt. złota
+gld[8]=Oro
+gld[9]=ゴールド
+gld[10]=Ouro
+gld[11]=золотых
+gld[12]=金币
 glg[0]=Flawless Emerald
 glg[1]=無瑕綠寶石
 glg[2]=makelloser Smaragd
@@ -14148,6 +14199,19 @@ gpy[9]=完璧なトパーズ
 gpy[10]=Topázio Perfeito
 gpy[11]=Идеальный топаз
 gpy[12]=完美的黄宝石
+gsb[0]=Sapphire
+gsb[1]=藍寶石
+gsb[2]=Saphir
+gsb[3]=Zafiro
+gsb[4]=Saphir
+gsb[5]=Zaffiro
+gsb[6]=사파이어
+gsb[7]=Szafir
+gsb[8]=[ms]Zafiro
+gsb[9]=サファイア
+gsb[10]=Safira
+gsb[11]=[ms]Сапфир
+gsb[12]=蓝宝石
 gsc[0]=Grand Scepter
 gsc[1]=莊嚴權杖
 gsc[2]=[ns]großes Szepter
@@ -14174,6 +14238,32 @@ gsd[9]=グレートソード
 gsd[10]=[fs]Espada Montante
 gsd[11]=[ms]великий меч
 gsd[12]=重剑
+gsg[0]=Emerald
+gsg[1]=綠寶石
+gsg[2]=Smaragd
+gsg[3]=Esmeralda
+gsg[4]=Émeraude
+gsg[5]=Smeraldo
+gsg[6]=에메랄드
+gsg[7]=Szmaragd
+gsg[8]=[fs]Esmeralda
+gsg[9]=エメラルド
+gsg[10]=Esmeralda
+gsg[11]=[ms]Изумруд
+gsg[12]=绿宝石
+gsr[0]=Ruby
+gsr[1]=紅寶石
+gsr[2]=Rubin
+gsr[3]=Rubí
+gsr[4]=Rubis
+gsr[5]=Rubino
+gsr[6]=루비
+gsr[7]=Rubin
+gsr[8]=[ms]Rubí
+gsr[9]=ルビー
+gsr[10]=Rubi
+gsr[11]=[ms]Рубин
+gsr[12]=红宝石
 gsv[0]=Amethyst
 gsv[1]=紫寶石
 gsv[2]=Amethyst
@@ -14187,6 +14277,19 @@ gsv[9]=アメジスト
 gsv[10]=Ametista
 gsv[11]=Аметист
 gsv[12]=紫宝石
+gsw[0]=Diamond
+gsw[1]=鑽石
+gsw[2]=Diamant
+gsw[3]=Diamante
+gsw[4]=Diamant
+gsw[5]=Diamante
+gsw[6]=다이아몬드
+gsw[7]=Diament
+gsw[8]=[ms]Diamante
+gsw[9]=ダイアモンド
+gsw[10]=Diamante
+gsw[11]=[ms]Алмаз
+gsw[12]=钻石
 gsy[0]=Topaz
 gsy[1]=黃寶石
 gsy[2]=Topas
@@ -14564,6 +14667,19 @@ ibk[9]=鑑定の書
 ibk[10]=Tomo de Identificação
 ibk[11]=Фолиант распознания
 ibk[12]=鉴定之书
+ice[0]=Malah's Potion
+ice[1]=瑪拉的藥水
+ice[2]=Malahs Elixier
+ice[3]=Poción de Malah
+ice[4]=Potion de Malah
+ice[5]=Pozione di Malah
+ice[6]=말라의 물약
+ice[7]=Mikstura Malah
+ice[8]=Poción de Malah
+ice[9]=マラーのポーション
+ice[10]=Poção de Malah
+ice[11]=Зелье Маллы
+ice[12]=马拉的药水
 icecaveshrine2[0]=Shrine
 icecaveshrine2[1]=祭壇
 icecaveshrine2[2]=Schrein
@@ -14707,6 +14823,19 @@ ktr[9]=カタール
 ktr[10]=[ms]Katar
 ktr[11]=[ms]катар
 ktr[12]=拳剑
+larva[0]=Larva
+larva[1]=幼蟲
+larva[2]=Larve
+larva[3]=Larva
+larva[4]=Larve
+larva[5]=Larva
+larva[6]=유충
+larva[7]=Larwa
+larva[8]=Larva
+larva[9]=幼虫
+larva[10]=Larva
+larva[11]=Личинка
+larva[12]=幼虫
 lax[0]=Large Axe
 lax[1]=重斧
 lax[2]=[fs]große Axt
@@ -17060,6 +17189,19 @@ tkf[9]=投げナイフ
 tkf[10]=[fs]Faca de Arremesso
 tkf[11]=[ms]метательный нож
 tkf[12]=投掷小刀
+toa[0]=Token of Absolution
+toa[1]=赦免徽章
+toa[2]=Zeichen der Absolution
+toa[3]=Muestra de absolución
+toa[4]=Gage d’absolution
+toa[5]=Gettone dell'Assoluzione
+toa[6]=면죄의 징표
+toa[7]=Znak Rozgrzeszenia
+toa[8]=Insignia de la absolución
+toa[9]=赦しのトークン
+toa[10]=Insígnia da Absolvição
+toa[11]=Талисман очищения
+toa[12]=赦免之证
 tow[0]=Tower Shield
 tow[1]=塔盾
 tow[2]=[ms]hoher Schild
@@ -17086,6 +17228,19 @@ tr1[9]=ホラドリムの巻物
 tr1[10]=Pergaminho Horádrico
 tr1[11]=Хорадримский свиток
 tr1[12]=赫拉迪姆卷轴
+tr2[0]=Scroll of Resistance
+tr2[1]=抗性卷軸
+tr2[2]=Schriftrolle des Widerstandes
+tr2[3]=Pergamino de resistencia
+tr2[4]=Parchemin de résistance
+tr2[5]=Pergamena della resistenza
+tr2[6]=저항의 두루마리
+tr2[7]=Zwój Odporności
+tr2[8]=Pergamino de resistencia
+tr2[9]=耐性の巻物
+tr2[10]=Pergaminho de Resistência
+tr2[11]=Свиток сопротивления
+tr2[12]=抗性卷轴
 tri[0]=Trident
 tri[1]=三叉戟
 tri[2]=[ms]Dreizack
@@ -18477,6 +18632,19 @@ xvg[9]=鮫革グローブ
 xvg[10]=[fp]Luvas de Couro de Tubarão
 xvg[11]=[pl]акульи перчатки
 xvg[12]=鲨鱼皮手套
+xyz[0]=Potion of Life
+xyz[1]=生命藥水
+xyz[2]=Elixier des Lebens
+xyz[3]=Poción de vida
+xyz[4]=Potion de vie
+xyz[5]=Pozione della Vita
+xyz[6]=생명력 물약
+xyz[7]=Mikstura Zdrowia
+xyz[8]=Poción de vida
+xyz[9]=生命のポーション
+xyz[10]=Poção de Vida
+xyz[11]=Зелье здоровья
+xyz[12]=生命药水
 youngdiablo[0]=Dark Wanderer
 youngdiablo[1]=黑暗流浪者
 youngdiablo[2]=Dunkler Wanderer
