Work in progress
* add `map_area` to config ini, to restrict map drawing area
* `msg_position` is relative to the whole D2R window now

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -27,6 +27,9 @@ full_line = 0
 ; 1-top right
 ; 2-center
 position = 2
+; restricted map_area ratio relative to D2R window, should be [0.1,1.0]
+; the map will be drawn in the center of this area if map_centered=0
+map_area = 1.0,1.0
 ; map scaling, can be 1.0-4.0, cut when larger than game window
 scale = 2.0
 ; 0-static map
