--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -20,6 +20,15 @@ fps = -1
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
 show = 0
+; hide map layer when certain panels are opened, 0x7F=all panels
+;  0x01-inventory panel
+;  0x02-character panel
+;  0x04-skill-tree panel
+;  0x08-system menu
+;  0x10-quest panel
+;  0x20-party panel
+;  0x40-mercenary panel
+panel_mask = 0x7F
 ; 0-draw a short line with dot ahead to target (d2hackmap style)
 ; 1-draw a full line to target
 full_line = 0
