changes to README and comments in D2RMH.ini
* fix some comments in D2RMH.ini
* add Visual Studio 2022 to README build instructions
* add Chinese localized README and D2RMH.ini in `contrib` folder

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -29,8 +29,9 @@ show = 0
 ;  0x20-party panel
 ;  0x40-mercenary panel
 panel_mask = 0x7F
-; 0-draw a short line with dot ahead to target (d2hackmap style)
-; 1-draw a full line to target
+; style for guide line
+;  0-draw a short line with dot ahead to target (d2hackmap style)
+;  1-draw a full line to target
 full_line = 0
 ; 0-top left
 ; 1-top right
@@ -46,7 +47,7 @@ scale = 2.0
 map_centered = 1
 ; Alpha channel for whole layer (0-255)
 alpha = 170
-; walkable area color (R,G,B) 0-255 for each channel
+; walkable area color (R,G,B) 0-255 for each channel, 0,0,0 = transparent
 walkable_color = 20,20,20
 ; map edge color, set 0,0,0 to hide edge
 edge_color = 128,128,128
