Work in progress
* use real size in objects.txt for drawing map objects
* (#55) draw doors now

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -69,6 +69,8 @@ well_color = 51,51,255
 monster_color = 255,0,0
 unique_monster_color = 192,166,130
 npc_color = 160,160,160
+; color for doors
+door_color = 80,255,80
 ; message list background color
 msg_bg_color = 1,1,1
 ; message position (x,y,align)
