--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -70,6 +70,8 @@ well_color = 51,51,255
 monster_color = 255,0,0
 unique_monster_color = 192,166,130
 npc_color = 160,160,160
+; 门的颜色
+door_color = 80,255,80
 ; 消息列表背景色
 msg_bg_color = 1,1,1
 ; 消息列表位置 (x,y,对齐)
