Work in progress
* (#46) config entries are changed and fixed, now it is able to display names, enchants and immunities for normal monsters now:
  * remove `show_normal_monsters`, merged into `show_monsters`
  * `show_monster_name` => `show_monster_names` and has 3 available values now
  * `show_monster_enchant` => `show_monster_enchants` and has 3 available values now
  * `show_monster_immune` => `show_monster_immunities` and has 3 available values now
  * old config entries are still accepted, but please migrate to new names if possible

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -79,24 +79,32 @@ msg_position = 0.95,0.25,2
 
 ; show player names
 show_player_names = 1
+; show npc's name
+show_npc_names = 1
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
-; show in-memory nearby monsters
-show_monsters = 1
 ; show in-memory nearby items on ground, check D2RMH_item.ini for filter settings
 show_items = 1
-; show normal monsters
-;  0 - only NPCs/super-uniques/bosses/champions are shown
-;  1 - common monsters and minions are also shown
-show_normal_monsters = 0
-; show monster's name
-show_monster_name = 0
-; show npc's name
-show_npc_name = 1
-; show monster's enchant including aura, check [enchants] section below.
-show_monster_enchant = 1
-; show monster's resist(immune), check [enchants] section below.
-show_monster_immune = 1
+; show in-memory nearby monsters
+;  0 - not shown
+;  1 - only NPCs/super-uniques/bosses/champions are shown
+;  2 - common monsters and minions are also shown
+show_monsters = 1
+; show monster's name, monsters must be shown in `show_monsters`
+;  0 - not shown
+;  1 - only NPCs/super-uniques/bosses/champions are shown
+;  2 - common monsters and minions are also shown
+show_monster_names = 0
+; show monster's enchant including aura, check [enchants] section below, monsters must be shown in `show_monsters`
+;  0 - not shown
+;  1 - only NPCs/super-uniques/bosses/champions are shown
+;  2 - common monsters and minions are also shown
+show_monster_enchants = 1
+; show monster's resist(immunity), check [enchants] section below, monsters must be shown in `show_monsters`
+;  0 - not shown
+;  1 - only NPCs/super-uniques/bosses/champions are shown
+;  2 - common monsters and minions are also shown
+show_monster_immunities = 1
 
 [enchants]
 ; strings can be tagged with color, in form '{n}', while n is taken from d2hackmap:
