--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -80,24 +80,32 @@ msg_position = 0.95,0.25,2
 
 ; 显示玩家名
 show_player_names = 1
-; 显示附近物件(目前显示神殿和井)
-show_objects = 1
-; 显示附近的怪物
-show_monsters = 1
-; 显示附近的物品掉落，可以修改D2RMH_item.ini设定自己的掉落过滤表
-show_items = 1
-; 显示普通怪物
-;  0 - 只有NPC/金怪/Boss会显示
-;  1 - 普通和仆从怪也显示
-show_normal_monsters = 0
-; 显示怪物名
-show_monster_name = 0
 ; 显示NPC名
 show_npc_name = 1
-; 显示怪物强化类型，包括光环，更多配置请看[enchants]部分
-show_monster_enchant = 1
-; 显示怪物的免疫，更多配置请看[enchants]部分
-show_monster_immune = 1
+; 显示附近物件(目前显示神殿和井)
+show_objects = 1
+; 显示附近的物品掉落，可以修改D2RMH_item.ini设定自己的掉落过滤表
+show_items = 1
+; 显示附近的怪物
+;  0 - 不显示
+;  1 - 只有NPC/金怪/Boss会显示
+;  2 - 普通和仆从怪也显示
+show_monsters = 1
+; 显示怪物名，怪物需要先在`show_monsters`中设置显示
+;  0 - 不显示
+;  1 - 只有NPC/金怪/Boss会显示
+;  2 - 普通和仆从怪也显示
+show_monster_names = 0
+; 显示怪物强化类型，包括光环，更多配置请看[enchants]部分，怪物需要先在`show_monsters`中设置显示
+;  0 - 不显示
+;  1 - 只有NPC/金怪/Boss会显示
+;  2 - 普通和仆从怪也显示
+show_monster_enchants = 1
+; 显示怪物的免疫，更多配置请看[enchants]部分，怪物需要先在`show_monsters`中设置显示
+;  0 - 不显示
+;  1 - 只有NPC/金怪/Boss会显示
+;  2 - 普通和仆从怪也显示
+show_monster_immunities = 1
 
 [enchants]
 ; 各种强化对应显示的字符串
