--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -139,152 +139,177 @@
 136=Tristram
 
 [objects]
-2=Shrine|Shrine
-26=Quest|Gibbet
-30=Quest|Inifuss
-59=Portal|Portal
-60=Portal|Portal
-61=Quest|StoneAlpha
-77=Shrine|Shrine
-81=Shrine|Shrine
-83=Shrine|Shrine
-84=Shrine|Shrine
-85=Shrine|Shrine
-93=Shrine|Shrine
-96=Shrine|Shrine
-97=Shrine|Shrine
-100=Portal|Duriel's Lair
-108=Quest|Malus
-109=Shrine|Shrine
-111=Well|well
-113=Well|well
-115=Well|well
-116=Shrine|Shrine
-118=Well|well
-119=Waypoint|Waypoint
-123=Shrine|Shrine
-124=Shrine|Shrine
-130=Well|well
-132=Well|well
-133=Shrine|shrine
-134=Shrine|shrine
-135=Shrine|shrine
-136=Shrine|shrine
-137=Well|well
-138=Well|well
-145=Waypoint|Waypoint
-149=Quest|taintedsunaltar
-150=Shrine|shrine
-151=Shrine|shrine
-152=Quest|orifice
-156=Waypoint|Waypoint
-157=Waypoint|Waypoint
-164=Shrine|Shrine
-165=Shrine|Shrine
-166=Shrine|Shrine
-167=Shrine|Shrine
-168=Shrine|Shrine
-170=Shrine|Shrine
-172=Shrine|Shrine
-173=Shrine|Shrine
-184=Shrine|Shrine
-190=Shrine|Shrine
-191=Shrine|Shrine
-193=Quest|LamTome
-197=Shrine|Shrine
-199=Shrine|Shrine
-200=Shrine|Shrine
-201=Shrine|Shrine
-202=Shrine|Shrine
-206=Shrine|Shrine
-226=Shrine|Shrine
-231=Shrine|Shrine
-232=Shrine|Shrine
-236=Shrine|Shrine
-237=Waypoint|Waypoint
-238=Waypoint|Waypoint
-249=Shrine|manashrine
-252=Quest|gidbinn
-260=Shrine|Shrine
-262=Shrine|Shrine
-263=Shrine|Shrine
-264=Shrine|Shrine
-265=Shrine|Shrine
-275=Shrine|Shrine
-276=Shrine|Shrine
-277=Shrine|Shrine
-278=Shrine|Shrine
-279=Shrine|Shrine
-280=Shrine|Shrine
-281=Shrine|Shrine
-282=Shrine|Shrine
-288=Waypoint|Waypoint
-298=Portal|portal
-299=Shrine|magic shrine
-300=Shrine|magic shrine
-302=Shrine|manashrine
-303=Shrine|magic shrine
-320=Shrine|manashrine
-322=Well|well
-323=Waypoint|Waypoint
-324=Waypoint|Waypoint
-325=Shrine|magic shrine
-342=Portal|portal
-343=Shrine|Shrine
-344=Shrine|Shrine
-354=Chest|box
-355=Chest|tr1
-356=Chest|Staff of Kings
-357=Quest|Tome
-361=Shrine|magic shrine
-376=Quest|Hellforge
-377=Portal|Guild Portal
-397=Chest|chest
-398=Waypoint|Waypoint
-402=Waypoint|Waypoint
-405=Chest|qhr
-406=Chest|qbr
-407=Chest|qey
-410=Portal|Siege Control
-414=Shrine|Shrine3wilderness
-415=Shrine|Shrine2wilderness
-421=Shrine|Shrine3wilderness
-422=Shrine|manashrine
-423=Shrine|healthshrine
-426=Well|well
-427=Shrine|Shrine2wilderness
-428=Shrine|Shrine2wilderness
-429=Waypoint|Waypoint
-460=Quest|Drehya
-462=Quest|Nihlathak
-464=Shrine|healthshrine
-465=Shrine|manashrine
-472=Shrine|icecaveshrine2
-473=Quest|cagedwussie1
-479=Shrine|icecaveshrine2
-483=Shrine|manashrine
-484=Shrine|healthshrine
-488=Shrine|magic shrine
-491=Shrine|manashrine
-492=Shrine|healthshrine
-493=Well|well
-494=Waypoint|Waypoint
-495=Shrine|magic shrine
-496=Waypoint|Waypoint
-497=Shrine|magic shrine
-498=Well|well
-499=Shrine|magic shrine2
-503=Shrine|magic shrine
-509=Shrine|magic shrine
-511=Waypoint|Waypoint
-512=Shrine|magic shrine
-513=Well|well
-519=Well|well
-520=Shrine|magic shrine
-521=Shrine|healthshrine
-522=Shrine|manashrine
-539=Waypoint|Waypoint
-580=Chest|chest
+2=Shrine|Shrine|3,3
+13=Door|1,3
+14=Door|3,1
+15=Door|1,3
+16=Door|3,1
+23=Door|1,7
+24=Door|7,1
+25=Door|9,1
+26=Quest|Gibbet|3,3
+27=Door|7,1
+30=Quest|Inifuss|5,5
+47=Door|7,1
+59=Portal|Portal|4,4
+60=Portal|Portal|2,2
+61=Quest|StoneAlpha|5,5
+62=Door|1,4
+63=Door|4,1
+64=Door|1,4
+75=Door|1,3
+77=Shrine|Shrine|3,3
+81=Shrine|Shrine|3,3
+83=Shrine|Shrine|3,3
+84=Shrine|Shrine|3,3
+85=Shrine|Shrine|3,3
+91=Door|1,7
+92=Door|7,1
+93=Shrine|Shrine|3,3
+96=Shrine|Shrine|3,3
+97=Shrine|Shrine|4,4
+98=Door|1,7
+99=Door|7,1
+100=Portal|Duriel's Lair|2,3
+108=Quest|Malus|2,2
+109=Shrine|Shrine|3,3
+111=Well|well|3,3
+113=Well|well|3,3
+115=Well|well|3,3
+116=Shrine|Shrine|3,3
+118=Well|well|3,3
+119=Waypoint|Waypoint|5,5
+123=Shrine|Shrine|3,3
+124=Shrine|Shrine|4,3
+130=Well|well|3,3
+132=Well|well|3,3
+133=Shrine|shrine|3,3
+134=Shrine|shrine|3,4
+135=Shrine|shrine|2,2
+136=Shrine|shrine|6,3
+137=Well|well|3,3
+138=Well|well|4,4
+145=Waypoint|Waypoint|3,3
+149=Quest|taintedsunaltar|4,2
+150=Shrine|shrine|5,5
+151=Shrine|shrine|5,4
+152=Quest|orifice|3,3
+156=Waypoint|Waypoint|3,3
+157=Waypoint|Waypoint|3,3
+164=Shrine|Shrine|3,3
+165=Shrine|Shrine|3,3
+166=Shrine|Shrine|3,3
+167=Shrine|Shrine|3,3
+168=Shrine|Shrine|3,3
+170=Shrine|Shrine|3,3
+172=Shrine|Shrine|2,2
+173=Shrine|Shrine|2,2
+184=Shrine|Shrine|3,3
+190=Shrine|Shrine|3,4
+191=Shrine|Shrine|3,3
+193=Quest|LamTome|2,2
+197=Shrine|Shrine|3,3
+199=Shrine|Shrine|3,4
+200=Shrine|Shrine|5,3
+201=Shrine|Shrine|4,4
+202=Shrine|Shrine|3,4
+206=Shrine|Shrine|3,4
+226=Shrine|Shrine|3,4
+229=Door|7,1
+230=Door|1,7
+231=Shrine|Shrine|3,4
+232=Shrine|Shrine|4,4
+236=Shrine|Shrine|3,3
+237=Waypoint|Waypoint|3,3
+238=Waypoint|Waypoint|3,3
+249=Shrine|manashrine|3,3
+252=Quest|gidbinn|3,3
+260=Shrine|Shrine|2,2
+262=Shrine|Shrine|3,3
+263=Shrine|Shrine|3,3
+264=Shrine|Shrine|3,3
+265=Shrine|Shrine|3,3
+275=Shrine|Shrine|3,3
+276=Shrine|Shrine|3,3
+277=Shrine|Shrine|3,3
+278=Shrine|Shrine|3,3
+279=Shrine|Shrine|2,2
+280=Shrine|Shrine|3,4
+281=Shrine|Shrine|3,4
+282=Shrine|Shrine|3,3
+288=Waypoint|Waypoint|3,3
+290=Door|1,3
+291=Door|3,1
+292=Door|1,3
+293=Door|3,1
+294=Door|1,3
+295=Door|3,1
+298=Portal|portal|5,2
+299=Shrine|magic shrine|3,3
+300=Shrine|magic shrine|3,3
+302=Shrine|manashrine|2,2
+303=Shrine|magic shrine|3,3
+320=Shrine|manashrine|2,2
+322=Well|well|3,3
+323=Waypoint|Waypoint|3,3
+324=Waypoint|Waypoint|3,3
+325=Shrine|magic shrine|3,3
+342=Portal|portal|2,2
+343=Shrine|Shrine|2,2
+344=Shrine|Shrine|2,2
+354=Chest|box|2,2
+355=Chest|tr1|2,2
+356=Chest|Staff of Kings|2,2
+357=Quest|Tome|2,2
+361=Shrine|magic shrine|3,3
+376=Quest|Hellforge|3,3
+377=Portal|Guild Portal|2,2
+397=Chest|chest|2,2
+398=Waypoint|Waypoint|3,3
+402=Waypoint|Waypoint|3,3
+405=Chest|qhr|2,2
+406=Chest|qbr|2,2
+407=Chest|qey|2,2
+410=Portal|Siege Control|2,2
+414=Shrine|Shrine3wilderness|2,2
+415=Shrine|Shrine2wilderness|2,2
+421=Shrine|Shrine3wilderness|2,2
+422=Shrine|manashrine|3,3
+423=Shrine|healthshrine|3,3
+426=Well|well|4,4
+427=Shrine|Shrine2wilderness|3,3
+428=Shrine|Shrine2wilderness|2,2
+429=Waypoint|Waypoint|5,5
+460=Quest|Drehya|2,2
+462=Quest|Nihlathak|2,2
+464=Shrine|healthshrine|2,2
+465=Shrine|manashrine|2,2
+472=Shrine|icecaveshrine2|2,2
+473=Quest|cagedwussie1|3,3
+479=Shrine|icecaveshrine2|2,2
+483=Shrine|manashrine|2,2
+484=Shrine|healthshrine|2,2
+488=Shrine|magic shrine|2,2
+491=Shrine|manashrine|3,3
+492=Shrine|healthshrine|3,3
+493=Well|well|4,4
+494=Waypoint|Waypoint|5,5
+495=Shrine|magic shrine|2,2
+496=Waypoint|Waypoint|5,5
+497=Shrine|magic shrine|3,3
+498=Well|well|3,3
+499=Shrine|magic shrine2|2,4
+503=Shrine|magic shrine|3,3
+509=Shrine|magic shrine|4,3
+511=Waypoint|Waypoint|5,5
+512=Shrine|magic shrine|2,2
+513=Well|well|4,4
+519=Well|well|3,3
+520=Shrine|magic shrine|2,2
+521=Shrine|healthshrine|3,3
+522=Shrine|manashrine|3,3
+539=Waypoint|Waypoint|5,5
+580=Chest|chest|2,2
 
 [npcs]
 256=Quest|izual
