make comments more clear due to reports of #47 and #59

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -36,9 +36,13 @@ full_line = 0
 ; 0-top left
 ; 1-top right
 ; 2-center
+; Note: check `map_area` entry for more info when you set position to 0 or 1
 position = 2
-; restricted map_area ratio relative to D2R window, should be [0.1,1.0]
+; restricted map_area ratio relative to D2R window(width,height)
+; each value should be between 0.1 and 1.0
 ; the map will be drawn in the center of this area if map_centered=0
+; Note: set them to a smaller value when you set position to 0 or 1,
+;       otherwise the layer will still take the whole D2R window
 map_area = 1.0,1.0
 ; map scaling, can be 1.0-4.0, cut when larger than game window
 scale = 2.0
