add adaptive size for `map_area`, and is set to default value, kinda resolves confusion caused by new mechanism of `map_area` (#47, #59, #63)

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -39,12 +39,14 @@ full_line = 0
 ; Note: check `map_area` entry for more info when you set position to 0 or 1
 position = 2
 ; restricted map_area ratio relative to D2R window(width,height)
-; each value should be between 0.1 and 1.0
+; each value should be between 0.0 and 1.0, while 0.0 means
+; adaptive size, aka suite current map size.
+; you can set only one value so that width/height will both use it.
 ; the map will be drawn in the center of this area if map_centered=0
-; Note: set them to a smaller value when you set position to 0 or 1,
-;       otherwise the layer will still take the whole D2R window
-map_area = 1.0,1.0
-; map scaling, can be 1.0-4.0, cut when larger than game window
+map_area = 0.0
+; map scaling, can be 1.0-4.0
+; cut when map_area is not set to adaptive size, or map size is larger than
+; D2R game window
 scale = 2.0
 ; 0-static map
 ; 1-keep player in map center
