--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -39,12 +39,14 @@ full_line = 0
 ; 2-正中
 ; 注意: 如果设置为0或者1请认真阅读`map_area`的说明
 position = 2
-; 限制显示范围(宽,高)，相对于D2R窗口的大小，范围在0.1到1.0之间
+; 限制显示范围(宽,高)，相对于D2R窗口的大小，范围在0.0到1.0之间
+; 如果设为0.0则为动态大小，随当前地图大小改变
+; 可以只设置一个值，表示宽高都使用这个值
 ; 如果map_centered为0则整个地图会在指定区域居中显示
-; 注意: 如果position设为0或者1，请将值减小，如果仍然设置为1.0,1.0，
-;      地图层将依然占据整个D2R窗口
-map_area = 1.0,1.0
-; 地图缩放，范围为[1.0,4.0]，超出显示范围的部分会被切去
+map_area = 0.0
+; 地图缩放，范围为[1.0,4.0]
+; 如果map_area不是动态大小，则超出显示范围的部分会被切去
+; 超出D2R窗口的部分也会被切去
 scale = 2.0
 ; 0-静态地图
 ; 1-保持玩家显示在正中的动态地图
