(#60) simple function that play sound on item dropping

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -146,3 +146,14 @@ fire_immunity = {1}i
 lightning_immunity = {9}i
 cold_immunity = {3}i
 poison_immunity = {2}i
+
+[sound]
+; sound files used by various functions
+; support WAVE files, filename with without '.wav' ext will be treated as system event sounds.
+; commonly used system event sounds:
+;   SystemAsterisk, SystemDefault, SystemExclamation, SystemHand
+; you can also check registry 'HKEY_CURRENT_USER\AppEvents\Schemes\Apps\.Default' for more
+; event sounds.
+sound[1] = SystemDefault
+sound[2] = SystemAsterisk
+; sound[3] = Beep.wav
