--- a/bin/D2RMH_item.ini
+++ b/bin/D2RMH_item.ini
@@ -1,6 +1,6 @@
 [items]
 ; format:
-;  <ID or Code>[+quality][*sockets][#ethereal]=style[,color]
+;  <ID or Code>[+quality][*sockets][#ethereal]=style[,color,[sound]]
 ;  quality: 0-low 1-normal 2-superior 3-magic 4-set 5-rare 6-unique 7-crafted
 ;  ethereal: 0 or 1
 ;  all other fields can be single value or range/list
@@ -13,12 +13,14 @@
 ;         8-orange 9-yellow 10-green2 11-purple 12-green3 13~15-white
 ;         use quality color by default if set to 0 or absent:
 ;            low/normal=15, superior=5, magic=3, set=2, rare=9, unique=4, crafted=8
-; full example: `crs+2,3*0,4,6=1` shows "Normal/Superior 0/4/6 Sockets Crystal Sword" on minimap with default color
+;  sound: index for sound playing on drop, check `[sound]` section in D2RMH.ini. 0 for mute, as default.
+; full example: `crs+2,3*0,4,6=1,0,1` shows "Normal/Superior 0/4/6 Sockets Crystal Sword" on minimap
+;               with default color and play sound[1] in `[sound]` section in D2RMH.ini.
 
 ; Items for Charsi's imbue
 ; Dimensional Shard
 300+1,2*0#0 = 0
-; Diadem, commonly used for Charsi's imbue
+; Diadem
 421+1,2*0#0 = 0
 
 ; Items for crafting
@@ -570,4 +572,5 @@
 600-601 = 3
 
 ; Runes
-r01-r33 = 3
+r01-r13 = 3
+r14-r33 = 3,0,1
