--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -147,3 +147,13 @@ fire_immunity = {1}火
 lightning_immunity = {9}電
 cold_immunity = {3}冰
 poison_immunity = {2}毒
+
+[sound]
+; 其他功能要用的声音文件设置
+; 支持WAVE文件，不以为.wav为扩展名的文件名将被视为系统事件声音
+; 常用系统事件声音:
+;   SystemAsterisk, SystemDefault, SystemExclamation, SystemHand
+; 可以查看注册表项 'HKEY_CURRENT_USER\AppEvents\Schemes\Apps\.Default' 获取其他事件声音名
+sound[1] = SystemDefault
+sound[2] = SystemAsterisk
+; sound[3] = Beep.wav
