Work in progress
* (#50) add text panel support, with new entries `text_panel_pattern` and `text_panel_position` in D2RMH.ini
* add `Reload Config` to tray menu for quick reloading D2RMH.ini
* fix a map update bug imported in last commit

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -82,6 +82,19 @@ msg_bg_color = 1,1,1
 ; message position (x,y,align)
 ; range of x and is [0.0,1.0], align can be 0(left), 1(centered), 2(right)
 msg_position = 0.95,0.25,2
+; show a text panel (updated every second), leave empty to disable
+; usable patterns:
+;   {newline}    start a newline here
+;   {duration}   current game duration, shown as hh:mm:ss
+;   {time}       current system time in 24h style: hh:mm:ss
+;   {difficulty} current difficulty name
+;   {act}        current act name ('ACT I' to 'ACT V')
+;   {mapname}    current map name
+text_panel_pattern =
+;text_panel_pattern = {duration}
+;text_panel_pattern = {duration}{newline}{time}{newline}{difficulty}{newline}{act}-{mapname}
+; text panel position, same as `msg_position`
+text_panel_position = 0.93,0.015,2
 
 ; show player names
 show_player_names = 1
