--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -82,6 +82,17 @@ msg_bg_color = 1,1,1
 ; 消息列表位置 (x,y,对齐)
 ; x和y的范围是[0.0,1.0], 对齐可以是0(左), 1(中), 2(右)
 msg_position = 0.95,0.25,2
+; 显示文字面板 (每秒更新)，留空则不显示
+; 支持模板:
+;   {newline}    换行
+;   {duration}   当前游戏持续时间，显示为hh:mm:ss
+;   {time}       当前系统时间: hh:mm:ss
+;   {difficulty} 当前难度
+;   {act}        当前ACT ('ACT I' 到 'ACT V')
+;   {mapname}    当前地图名
+text_panel_pattern = {duration}
+; 面板位置, 同 `msg_position`
+text_panel_position = 0.93,0.015,2
 
 ; 显示玩家名
 show_player_names = 1
