--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -19121,6 +19121,45 @@ std[9]=英雄の旗
 std[10]=[ms]Estandarte de Heróis
 std[11]=Знамя героя
 std[12]=英雄的旗帜
+strCreateGameHellText[0]=Hell
+strCreateGameHellText[1]=地獄
+strCreateGameHellText[2]=Hölle
+strCreateGameHellText[3]=Infierno
+strCreateGameHellText[4]=Enfer
+strCreateGameHellText[5]=Inferno
+strCreateGameHellText[6]=지옥
+strCreateGameHellText[7]=Piekło
+strCreateGameHellText[8]=Infierno
+strCreateGameHellText[9]=ヘル
+strCreateGameHellText[10]=Tormento
+strCreateGameHellText[11]=Преисподняя
+strCreateGameHellText[12]=地狱
+strCreateGameNightmareText[0]=Nightmare
+strCreateGameNightmareText[1]=惡夢
+strCreateGameNightmareText[2]=Alptraum
+strCreateGameNightmareText[3]=Pesadilla
+strCreateGameNightmareText[4]=Cauchemar
+strCreateGameNightmareText[5]=Incubo
+strCreateGameNightmareText[6]=악몽
+strCreateGameNightmareText[7]=Koszmar
+strCreateGameNightmareText[8]=Pesadilla
+strCreateGameNightmareText[9]=ナイトメア
+strCreateGameNightmareText[10]=Pesadelo
+strCreateGameNightmareText[11]=Кошмар
+strCreateGameNightmareText[12]=噩梦
+strCreateGameNormalText[0]=Normal
+strCreateGameNormalText[1]=普通
+strCreateGameNormalText[2]=Normal
+strCreateGameNormalText[3]=Normal
+strCreateGameNormalText[4]=Normal
+strCreateGameNormalText[5]=Normale
+strCreateGameNormalText[6]=보통
+strCreateGameNormalText[7]=Normalny
+strCreateGameNormalText[8]=Normal
+strCreateGameNormalText[9]=ノーマル
+strCreateGameNormalText[10]=Normal
+strCreateGameNormalText[11]=Обычная
+strCreateGameNormalText[12]=普通
 stu[0]=Studded Leather
 stu[1]=鑲釘皮甲
 stu[2]=[ns]beschlagenes Leder
