Work in progress
* fix `panel_mask` entry in config is not correctly processed
* add waypoint panel to `panel_mask`

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -28,7 +28,8 @@ show = 0
 ;  0x10-quest panel
 ;  0x20-party panel
 ;  0x40-mercenary panel
-panel_mask = 0x7F
+;  0x80-waypoint panel
+panel_mask = 0xFF
 ; style for guide line
 ;  0-draw a short line with dot ahead to target (d2hackmap style)
 ;  1-draw a full line to target
