show neighbour maps, with `neighbour_map_bounds` entry added to D2RMH.ini

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -52,8 +52,13 @@ scale = 2.0
 ; 0-static map
 ; 1-keep player in map center
 map_centered = 1
-; Alpha channel for whole layer (0-255)
+; Alpha channel(aka opacity) for whole layer (0-255)
+;  0 is completely transparent, 255 is not tranparent at all
 alpha = 170
+; bounds(in piexls) for neighbour maps
+; set to 0 to disable neighbour maps show
+; note: this costs VRAM a bit if set too large (2048 costs ~64MB VRAM at max)
+neighbour_map_bounds = 2048
 ; walkable area color (R,G,B) 0-255 for each channel, 0,0,0 = transparent
 walkable_color = 20,20,20
 ; map edge color, set 0,0,0 to hide edge
