add negative values for `neighbour_map_bounds`, and set its default value to -1

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -56,9 +56,14 @@ map_centered = 1
 ;  0 is completely transparent, 255 is not tranparent at all
 alpha = 170
 ; bounds(in piexls) for neighbour maps
+; can be set to negative to indicate recursive depth,
+;   e.g. -1 for show only nearby level maps
+;        -2 for show maps around nearby maps also
 ; set to 0 to disable neighbour maps show
-; note: this costs VRAM a bit if set too large (2048 costs ~64MB VRAM at max)
-neighbour_map_bounds = 2048
+; note: this costs CPU/VRAM a bit if is set to a large value, or nearby maps
+;       are large while set to negative(=2048 costs ~64MB VRAM at max),
+;       disable it if you get performance impact
+neighbour_map_bounds = -1
 ; walkable area color (R,G,B) 0-255 for each channel, 0,0,0 = transparent
 walkable_color = 20,20,20
 ; map edge color, set 0,0,0 to hide edge
