--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -55,9 +55,13 @@ map_centered = 1
 ; 整个地图层的透明度(0-255)
 alpha = 170
 ; 相邻地图边界(点阵为单位)
+; 可以设为负数表示寻找相邻地图循环深度
+;   例如 -1 表示只显示相邻地图
+;        -2 还显示相邻地图的相邻地图
 ; 设为0不显示相邻地图
-; 注意：设置较大的值会消耗一定的显存(2048最多大约消耗64M显存)
-neighbour_map_bounds = 2048
+; 注意：设置较大的值，或设为负数但地图较大时会额外消耗一定的CPU和显存(2048最多大约消耗64M显存)
+;       请关闭此选项如果感受到较大的系统性能损失
+neighbour_map_bounds = -1
 ; 可行走部分的颜色 (R,G,B) 每个颜色范围是0-255, 0,0,0表示透明
 walkable_color = 20,20,20
 ; 地图边缘的颜色
