Work in progress
* move json lib into d2mapapi folder
* add d2mapapi_httpd, with simphttp lib added, the whole d2mapapi will
  be separated out as a standalone project later
* add d2mapapi_piped
* remove common folder, all files are moved into tools folder

--- a/d2mapapi/CMakeLists.txt
+++ b/d2mapapi/CMakeLists.txt
@@ -1,4 +1,23 @@
-file(GLOB SRC_FILES *.cpp *.h)
-add_library(d2mapapi STATIC ${SRC_FILES})
+cmake_minimum_required(VERSION 3.13)
+
+add_subdirectory(simphttp)
+add_library(d2mapapi STATIC
+    collisionmap.cpp collisionmap.h
+    d2map.cpp d2map.h
+    d2ptrs.h d2structs.h
+    offset.cpp offset.cpp
+    session.cpp session.h)
+target_include_directories(d2mapapi PUBLIC json)
 set_target_properties(d2mapapi PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-target_include_directories(d2mapapi PRIVATE ../json)
+
+add_executable(d2mapapi_httpd EXCLUDE_FROM_ALL httpd.cpp)
+target_link_libraries(d2mapapi_httpd d2mapapi simphttp)
+set_target_properties(d2mapapi_httpd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_executable(d2mapapi_piped EXCLUDE_FROM_ALL piped.cpp)
+target_link_libraries(d2mapapi_piped d2mapapi)
+set_target_properties(d2mapapi_piped PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_executable(d2mapapi_host EXCLUDE_FROM_ALL host.cpp)
+target_link_libraries(d2mapapi_host d2mapapi)
+set_target_properties(d2mapapi_host PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
