--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,6 @@ endif()
 add_executable(D2RMH WIN32 ${D2RMH_SRC_FILES})
 add_custom_target(D2RMH_RES DEPENDS D2RMH.ico)
 add_dependencies(D2RMH D2RMH_RES)
-target_include_directories(D2RMH PRIVATE ../d2mapapi stb)
-target_link_libraries(D2RMH glad inih d2mapapi shlwapi comctl32 winmm)
+target_include_directories(D2RMH PRIVATE stb)
+target_link_libraries(D2RMH glad inih d2mapapi_pipehost shlwapi comctl32 winmm)
 set_target_properties(D2RMH PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
