git subrepo pull d2mapapi
subrepo:
  subdir:   "d2mapapi"
  merged:   "b1dfee0"
upstream:
  origin:   "git@github.com:soarqin/d2mapapi_mod.git"
  branch:   "master"
  commit:   "b1dfee0"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo.git"
  commit:   "b4ae8f1"

--- a/d2mapapi/CMakeLists.txt
+++ b/d2mapapi/CMakeLists.txt
@@ -20,11 +20,6 @@ if(CMAKE_SIZEOF_VOID_P EQUAL 4)
         session.cpp session.h)
     target_include_directories(d2mapapi PUBLIC . PRIVATE json)
     set_target_properties(d2mapapi PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    add_library(d2mapapi_pipehost STATIC EXCLUDE_FROM_ALL
-        collisionmap.cpp collisionmap.h
-        pipehost.cpp pipehost.h)
-    target_include_directories(d2mapapi_pipehost PUBLIC . PRIVATE json)
-    set_target_properties(d2mapapi_pipehost PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
     add_executable(d2mapapi_httpd EXCLUDE_FROM_ALL httpd.cpp)
     target_link_libraries(d2mapapi_httpd d2mapapi simphttp)
@@ -34,9 +29,7 @@ if(CMAKE_SIZEOF_VOID_P EQUAL 4)
         target_link_options(d2mapapi_httpd PRIVATE -municode)
     endif()
     set_target_properties(d2mapapi_httpd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-endif()
 
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
     add_executable(d2mapapi_piped WIN32 EXCLUDE_FROM_ALL piped.cpp)
     target_link_libraries(d2mapapi_piped d2mapapi)
     if(MSVC)
@@ -45,9 +38,15 @@ if(CMAKE_SIZEOF_VOID_P EQUAL 8)
         target_link_options(d2mapapi_piped PRIVATE -municode)
     endif()
     set_target_properties(d2mapapi_piped PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-    # this is a test program for d2mapapi_piped functions
-    add_executable(d2mapapi_host EXCLUDE_FROM_ALL host.cpp)
-    target_link_libraries(d2mapapi_host d2mapapi_pipehost)
-    set_target_properties(d2mapapi_host PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif()
+
+add_library(d2mapapi_pipehost STATIC EXCLUDE_FROM_ALL
+    collisionmap.cpp collisionmap.h
+    pipehost.cpp pipehost.h)
+target_include_directories(d2mapapi_pipehost PUBLIC . PRIVATE json)
+set_target_properties(d2mapapi_pipehost PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
+# this is a test program for d2mapapi_pipehost functions
+add_executable(d2mapapi_host EXCLUDE_FROM_ALL host.cpp)
+target_link_libraries(d2mapapi_host d2mapapi_pipehost)
+set_target_properties(d2mapapi_host PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
