work in progress for new transparency mechanism

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -54,6 +54,9 @@ scale = 2.0
 map_centered = 1
 ; Alpha channel(aka opacity) for whole layer (0-255)
 ;  0 is completely transparent, 255 is not tranparent at all
+; this is stacked with other color settings, for exampe:
+;   while color = 128,128,128,128(alpha channel is 128), alpha = 160,
+;   the drawn color alpha channel is: 128*160/255=80
 alpha = 170
 ; bounds(in piexls) for neighbour maps
 ; can be set to negative to indicate recursive depth,
