--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        include:
-          - generator: MinGW Makefiles
-            ident: mingw32
-          - generator: Visual Studio 16 2019
-            ident: vc2019
-            extra_flags: -A Win32
+        compiler: ["msys2_mingw", "msvc2019"]
 
     steps:
       - name: Setup Environment
@@ -32,16 +27,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: CMake Configure
-        run: cmake -B "${{github.workspace}}/${{matrix.ident}}_build" -G "${{matrix.generator}}" ${{matrix.extra_flags}} -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}" -DUSE_STATIC_CRT=ON
-
-      - name: Build
-        # Build your program with the given configuration
-        run: cmake --build "${{github.workspace}}/${{matrix.ident}}_build" --config "${{env.BUILD_TYPE}}" --target snapshot-pack -j
+      - name: CMake Configure and Build
+        shell: cmd
+        run: "${{github.workspace}}\build_${{matrix.compiler}}.bat"
 
       - uses: actions/upload-artifact@v2
         with:
-          name: D2RMH-snapshot-${{matrix.ident}}
+          name: D2RMH-snapshot-${{matrix.compiler}}
           path: |
-            ${{github.workspace}}/${{matrix.ident}}_build/bin/D2RMH-snapshot.zip
+            ${{github.workspace}}/build/${{matrix.compiler}}/dist/D2RMH-snapshot.zip
           retention-days: 7
