work in progress
* tweak about dialog
* `d2mapapi_piped` returns init error string

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 add_subdirectory(glad)
 
+include(GetVersion)
+
 file(GLOB D2RMH_SRC_FILES *.cpp *.h res.rc)
 if(NOT MSVC)
   set(D2RMH_SRC_FILES ${D2RMH_SRC_FILES} manifest.rc)
 endif()
 add_executable(D2RMH WIN32 ${D2RMH_SRC_FILES})
+get_project_version(D2RMH)
 add_custom_target(D2RMH_RES DEPENDS D2RMH.ico)
 add_dependencies(D2RMH D2RMH_RES)
 if(TARGET d2mapapi_piped)
